# DESAFIO-EDESOFT-BACKEND

./: README.md
django/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  my-local-sqlite.db  pyproject.toml  readme.md  zappa_settings.json
django/apps/: urls.py
django/apps/api/: urls.py
django/apps/api/admin/: usuario.py
django/apps/api/migrations/: 0001_initial.py
django/apps/api/models/: usuario.py
django/apps/api/serializers/: __init__.py  s3serializer.py  usuario.py
django/apps/api/views/: __init__.py  desafio_view.py  read_csv_from_aws.py
django/config/: settings.py
django/static/: teste.csv
